[package]
name = "based"
version = "1.0.0"
authors = ["Andrew Yan <andrewyan333@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Custom numeral systems"
readme = "README.md"
repository = "https://github.com/Yam76/based"
keywords = ["base", "numeric", "conversion", "decimal"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
